# EquationX

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/equationx/: __init__.py  __main__.py  agent.py  api.py  cli.py  connectors.py  data_generator.py  database.py  explanation.py  gp_engine.py  grammar.py  logging_config.py  mcp_server.py  models.py  observability.py  ode_solver.py  orchestrator.py  pareto.py  simulation.py
backend/tests/: test_api.py  test_cli.py  test_data_generator.py  test_explanation.py  test_gp_engine.py  test_grammar.py  test_mcp_server.py  test_ode_solver.py  test_simulation.py
examples/: pre_discovered_cache.json  pre_discovered_cpu.json  pre_discovered_db.json  pre_discovered_queue.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: DiscoverPage.tsx  EquationsPage.tsx  ExplainPage.tsx  ForecastPage.tsx  SimulatePage.tsx
frontend/src/test/: App.test.tsx
mcp-config/: claude_desktop_config.json  cursor_mcp.json
