[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equationx"
version = "0.1.0"
description = "AI Scientist for Infrastructure — discovers mathematical laws governing your systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Akhilucky", email = "akhileshkumaravel@gmail.com"},
]
keywords = ["equation-discovery", "symbolic-regression", "infrastructure", "ode", "forecasting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
    "deap>=1.4",
    "pandas>=2.0",
    "mcp>=0.1.0",
    "click>=8.0",
    "starlette>=0.27.0",
]

[project.scripts]
equationx = "equationx.cli:main"

[project.urls]
Homepage = "https://github.com/Akhilucky/EquationX"
Repository = "https://github.com/Akhilucky/EquationX"
Issues = "https://github.com/Akhilucky/EquationX/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["equationx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
